arduinos were not sending the last byte. In function getbuffer t_dim had wrong order. Slider events.

--- a/NodeArduino/public/html/index.html
+++ b/NodeArduino/public/html/index.html
@@ -26,7 +26,7 @@
     <div class="row">
       <div class="small-12 columns">
         <div class="small-9 columns">
-          <div class="slider" id="rSlider" data-slider data-start="0" data-end="255">
+          <div class="slider" id="rSlider" data-slider data-changed-delay="50" data-start="0" data-end="255">
             <span class="slider-handle" id="rHandle" style="background-color:#ec5840;" data-slider-handle role="slider" tabindex="1" aria-controls="red"></span>
             <span class="slider-fill" data-slider-fill></span>
           </div>
@@ -40,7 +40,7 @@
     <div class="row">
       <div class="small-12 columns">
         <div class="small-9 columns">
-          <div class="slider" id="gSlider" data-slider data-start="0" data-end="255">
+          <div class="slider" id="gSlider" data-slider data-changed-delay="50" data-start="0" data-end="255">
             <span class="slider-handle" id="gHandle" style="background-color:#3adb76;"  data-slider-handle role="slider" tabindex="1" aria-controls="green"></span>
             <span class="slider-fill" data-slider-fill></span>
           </div>
@@ -54,7 +54,7 @@
     <div class="row">
       <div class="small-12 columns">
         <div class="small-9 columns">
-          <div class="slider" id="bSlider" data-slider data-start="0" data-end="255">
+          <div class="slider" id="bSlider" data-slider data-changed-delay="50" data-start="0" data-end="255">
             <span class="slider-handle" id="bHandle" data-slider-handle role="slider" tabindex="1" aria-controls="blue"></span>
             <span class="slider-fill" data-slider-fill></span>
           </div>
